--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ src/main/go/snippets/deck/x.data
 src/main/rust/rs/target/*
 src/main/rust/rs/Cargo.lock
 src/main/rust/rs/.idea
+
+src/main/webassembly/wasm1/node_modules/
+src/main/webassembly/wasm2/node_modules/
