--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,8 @@ src/main/webassembly/wasm1/node_modules/
 src/main/webassembly/wasm2/node_modules/
 src/main/webassembly/wasm3/node_modules/
 src/main/webassembly/wasm4/node_modules/
+src/main/webassembly/wasm4 (copy)
+src/main/webassembly/wasm5
+src/main/webassembly/wasm6
+
 
