--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,8 @@ src/main/webassembly/wasm5
 src/main/webassembly/wasm6
 
 
+
+src/main/go/snippets/app1/votes.diskqueue.meta.dat
+
+src/main/go/snippets/app1/*.dat
+
