--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ src/main/rust/rs/target/*
 src/main/rust/rs/Cargo.lock
 src/main/rust/rs/.idea
 src/main/rust/dyn/target/
+src/main/rust/cli/target/
 
 src/main/webassembly/wasm1/node_modules/
 src/main/webassembly/wasm2/node_modules/
