--- a/src/main/rust/iterator/Cargo.toml
+++ b/src/main/rust/iterator/Cargo.toml
@@ -20,8 +20,13 @@ path="src/rc.rs"
 name="pool"
 path="src/pool.rs"
 
+[[bin]]
+name="rayon"
+path="src/rayon.rs"
+
 [dependencies]
 itertools = "0.8.2"
+rayon = "1.3.0"
 
 # cargo login
 # cargo publish
