--- a/src/main/cpp/CMakeLists.txt
+++ b/src/main/cpp/CMakeLists.txt
@@ -1,21 +1,29 @@
+cmake_minimum_required(VERSION 3.16)
 
-#add_executable(Main smartPointers/Main.hpp)
-#target_compile_features(Main PUBLIC cxx_std_17)
-#
-#add_executable(Main2 smartPointers/Main2.hpp)
-#target_compile_features(Main2 PUBLIC cxx_std_17)
-#
-#add_executable(Main3 smartPointers/Main3.hpp)
-#target_compile_features(Main3 PUBLIC cxx_std_17)
+project(project)
+include(FetchContent)
+FetchContent_Declare(
+        googletest
+        GIT_REPOSITORY https://github.com/google/googletest.git
+        GIT_TAG        release-1.8.0
+)
+FetchContent_Declare(
+        benchmark
+        GIT_REPOSITORY https://github.com/google/benchmark.git
+        GIT_TAG        v1.5.2
+)
+FetchContent_MakeAvailable(googletest benchmark)
 
-#set_property(TARGET Main3 PROPERTY CXX_STANDARD 17)
 
+add_executable(Main smartPointers/Main.cpp)
+target_compile_features(Main PUBLIC cxx_std_20)
 
+add_executable(Main2 smartPointers/Main2.cpp)
+target_compile_features(Main2 PUBLIC cxx_std_20)
 
-find_package(benchmark)
-if(TARGET benchmark::benchmark)
-    add_executable(polyBenchmark benchmark/benchmark1.cpp)
-    target_link_libraries(polyBenchmark PRIVATE benchmark::benchmark)
-    target_include_directories(polyBenchmark PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
-    set_property(TARGET polyBenchmark PROPERTY CXX_STANDARD 17)
-endif()
+add_executable(concept concept/concepts.cpp)
+set_property(TARGET concept PROPERTY CXX_STANDARD 20)
+
+add_executable(polyBenchmark benchmark/benchmark1.cpp)
+target_link_libraries(polyBenchmark PRIVATE benchmark::benchmark)
+set_property(TARGET polyBenchmark PROPERTY CXX_STANDARD 20)
